Fixed some layout issues. Cleaned up dependencies and updated to latest for bower and npm

--- a/src/core/core.less
+++ b/src/core/core.less
@@ -9,8 +9,8 @@ html body {
   color: @dark-grey;
 }
 
-.app {
-  margin-top: 5px;
+body {
+  padding: 5px;
 }
 
 .full-height {
@@ -19,10 +19,6 @@ html body {
 
 .full-width {
   width: 100%;
-}
-
-.container-fluid {
-  height: 100%;
 }
 
 .toast-top-right {
